--- a/GoMonitor/GoMonitor.csproj
+++ b/GoMonitor/GoMonitor.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContentProvider.cs" />
+    <Compile Include="ContentResourceGetter.cs" />
     <Compile Include="ContentService.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -55,8 +56,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="LocalFileManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
