--- a/tests/GoMonitor-tests/GoMonitor-tests.csproj
+++ b/tests/GoMonitor-tests/GoMonitor-tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ContentServiceFacts.cs" />
     <Compile Include="ContentServiceFatcs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilityFacts.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
